tests/negative/neg_write_to_constant_field.safe
-- Test: neg_write_to_constant_field
-- Description: Writes through a selected part rooted in a constant object must be rejected.
-- Expected: REJECT write_to_constant

package neg_write_to_constant_field

   type pair is record
      left  : integer
      right : integer

   function run
      value : constant pair = ((left = 1, right = 2) as pair)

      value.left = 3

